# Open-Jarvis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  clippy.toml  package.json  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  mcp-integration.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs  server.rs  tools.rs
