[package]
name = "jarvis-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
dirs-next = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
